<resources>
    <string name="app_name">TrevorsAndroidApplication</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="todo">TODO</string>
    <string name="weight">Weight</string>
    <string name="add_item">Add Item</string>
    <string name="event_tracker">Event Tracker</string>
    <string name="your_weight_history">Your Weight History</string>
    <string name="settings">Settings</string>
    <string name="sms_notifications">SMS Notifications</string>
    <string name="weight_logs">Weight Logs</string>
    <string name="weight_log">Weight Log</string>
    <string name="aa">TODO</string>
    <string name="Remove" />
    <string name="add_items">Add Items</string>
    <string name="enter_a_new_item">Enter a new item</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="current_weight_amount">Current Weight Amount</string>
    <string name="weight_app">Weight App</string>
    <string name="your_weight_goal">Your Weight Goal</string>
    <string name="edit_goal">Edit Goal</string>
    <string name="weight_goal_s">Weight Goal %s</string>
</resources>