<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background"
    tools:ignore="ExtraText">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight_goal_s"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:layout_margin="50dp"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/weightLogText"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/goalAmount"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="#30ffffff"
            android:drawablePadding="20dp"
            android:hint="@string/your_weight_goal"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="#B74E4E4E"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/updateWeightGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:text="@string/edit_goal"
            android:contentDescription="@string/Remove"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/weightAmount"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="#30ffffff"
            android:drawablePadding="20dp"
            android:hint="@string/current_weight_amount"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="#B74E4E4E"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/addWeightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:text="@string/add_item"
            android:contentDescription="@string/Remove"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lvItems"
        tools:listitem="@layout/weight_list_item"
        />
</LinearLayout>