<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:ignore="ExtraText">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:layout_margin="50dp"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/signIn"
    />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@+id/signIn"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:textColorHint="#B74E4E4E"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="20dp"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textWebPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="#B74E4E4E" />
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:layout_below="@+id/password"
        android:gravity="center"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
    />

</RelativeLayout>